# DopenessReport-OnPrem

./: DopenessReport.ipynb  README.md  pyproject.toml
data/: dopeness_report.md
data_out_dopeness/workflow_output/: all_keys.txt  combined_answers.jsonl  final_output.md  output_template.jsonl
qdrant_storage/: raft_state.json
qdrant_storage/collections/current_docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/current_docs/0/segments/17fe2788-9b0d-4693-9553-6343ca80475c/: 000010.sst  000015.sst  000020.sst  000026.sst  000032.sst  000037.sst  000042.sst  000048.sst  000054.sst  000060.sst  000066.sst  000071.sst  000072.sst  000075.sst  000077.sst  000079.sst  000081.sst  000083.sst  000085.sst  IDENTITY  LOG  MANIFEST-000005  segment.json
qdrant_storage/collections/current_docs/0/segments/2ed0d793-bc33-400e-9d89-cff405d1cb4d/: 000010.sst  000015.sst  000020.sst  000026.sst  000032.sst  000037.sst  000042.sst  000048.sst  000054.sst  000060.sst  000066.sst  000071.sst  000072.sst  000075.sst  000077.sst  000078.sst  000080.sst  IDENTITY  LOG  MANIFEST-000005  segment.json
qdrant_storage/collections/current_docs/0/segments/35b2e64d-9cf3-4f98-8d0c-a405c832fe73/: 000010.sst  000015.sst  000020.sst  000026.sst  000032.sst  000037.sst  000042.sst  000048.sst  000054.sst  000060.sst  000066.sst  000071.sst  000072.sst  IDENTITY  (+7 more)
qdrant_storage/collections/current_docs/0/wal/: first-index
qdrant_storage/collections/sitemap_index/0/: newest_clocks.json
qdrant_storage/collections/sitemap_index/0/wal/: first-index
storage/: index_store.json
(+492 files in other folders)
